# project1

./: .env  .gitignore  converter.py  main.py  pyproject.toml  routers.py
aulas/: aula15_secao5.py  aula16_secao5.py  aula18_secao5.py  aula19_secao5.py  aula21_secao5.py  aula22_secao5.py  aula23_secao5.py  aula24_secao5.py  aula25_secao5.py
